--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body>
 <!--1페이지 열기-->
-<div style="text-align: center;">
-    <p style="font-size: 30px; color: #ea178c; margin-bottom: -150px;">H</p>
+<div style="text-align: center; margin: 0; border: 0; padding: 0;">
+    <p style="font-size: 30px; color: #ea178c; margin-top: -1px; margin-bottom: -170px;">H</p>
     <p style="font-size: 300px;">Hello.</p>
     <p style="font-family: 'Cormorant Garamond'; font-weight: 500;  font-size: 20px; margin-top: -85px; font-weight: 800;">Today at Huge.</p>
     <p>|</p>
@@ -23,10 +23,12 @@
 
 <!--2페이지 열기-->
 <div style="background-image: url(img/hugeinc.png); background-size: cover; background-position: center; width: 100vw; height: 100vh;">
-    <div style="color: white; margin-left: 208px; padding-top: 30px;">
+    <div style="color: white; margin-left: 217px; padding-top: 30px;">
         <img src="img/검정H.jpg" style="margin-left: 700px;">
+        <p style="margin-left: -150px; margin-bottom: -73px; color: white;">01.&nbsp;&nbsp;&nbsp;<span style="text-decoration: line-through; letter-spacing: 50px;">&nbsp;&nbsp;</span></p>
         <p style="font-size: 25px;  padding-top: 20px;">Win.</p>
-        <P style="font-size: 90px; padding-top: 50px;">Huge Thanks.</P>
+        <P style="font-size: 90px; padding-top: 50px; margin-bottom: 30px;">Huge Thanks.</P>
+        <p style="text-decoration: line-through; letter-spacing: 50px; color: white;">&nbsp;&nbsp;</p>
         <p style="font-family: 'Cormorant Garamond'; font-size: 24px;">Campaign US named Huge its 2019 Innovation Agency of<br>
         the Year.</p>
     </div>
@@ -36,10 +38,12 @@
 
 <!--3페이지 열기-->
 <div style="background-image: url(img/hugeinc10.png); background-size: cover; background-position: center;  width: 100vw; height: 100vh;">
-    <div style="margin-left: 208px; padding-top: 30px;">
+    <div style="margin-left: 217px; padding-top: 30px;">
         <img src="img/검정H.jpg" style="margin-left: 700px;">
+    <p style="margin-left: -150px; margin-bottom: -73px;">02.&nbsp;&nbsp;&nbsp;<span style="text-decoration: line-through; letter-spacing: 50px;">&nbsp;&nbsp;</span></p>
     <p style="font-size: 25px; padding-top: 20px;">Leadership.</p>
-    <p style="font-size: 90px; padding-top: 50px; line-height: 90px;">Huge<br>Appointment</p>
+    <p style="font-size: 90px; padding-top: 50px; line-height: 90px; margin-bottom: 40px;">Huge<br>Appointment</p>
+    <p style="text-decoration: line-through; letter-spacing: 50px;">&nbsp;&nbsp;</p>
     <p style="font-family: 'Cormorant Garamond'; font-size: 24px;">After three tears leading global strategic groth for Huge,<br>Matt Weiss has been appointed President, Huge BK</p>
     </div>
 </div>
@@ -47,10 +51,12 @@
 
 <!--4페이지 열기-->
 <div style="background-image: url(img/hugeinc12.png); background-size: cover; background-position: center;  width: 100vw; height: 100vh;">
-    <div  style="color: white ;margin-left: 208px; padding-top: 30px;">
+    <div  style="color: white ;margin-left: 217px; padding-top: 30px;">
     <img src="img/검정H.jpg" style="margin-left: 700px;">
+    <p style="margin-left: -150px; margin-bottom: -73px;">03.&nbsp;&nbsp;&nbsp;<span style="text-decoration: line-through; letter-spacing: 50px;">&nbsp;&nbsp;</span></p>
     <p style="font-size: 25px; padding-top: 20px;">Work.</p>
-    <p style="font-size: 90px; padding-top: 50px;">It's in the bag.</p>
+    <p style="font-size: 90px; padding-top: 50px; margin-bottom: 30px;">It's in the bag.</p>
+    <p style="text-decoration: line-through; letter-spacing: 50px;">&nbsp;&nbsp;</p>
     <p style="font-family: 'Cormorant Garamond'; font-size: 24px;">Huge rebrands grocery delivery service Shipt.</p>
     </div>
 </div>
@@ -59,10 +65,12 @@
 
 <!--5페이지 열기-->
 <div style="background-image: url(img/hugeinc2.jpg); background-size: cover; background-position: center;  width: 100vw; height: 100vh;">
-    <div style="margin-left: 208px; padding-top: 30px;">
+    <div style="margin-left: 217px; padding-top: 30px;">
         <img src="img/검정H.jpg" style="margin-left: 700px;">
+        <p style="margin-left: -150px; margin-bottom: -73px;">04.&nbsp;&nbsp;&nbsp;<span style="text-decoration: line-through; letter-spacing: 50px;">&nbsp;&nbsp;</span></p>
         <p style="font-size: 25px; padding-top: 20px;">Leadership.</p>
-        <p style="font-size: 90px; padding-top: 50px;">Hello Fura.</p>
+        <p style="font-size: 90px; padding-top: 50px; margin-bottom: 30px;">Hello Fura.</p>
+        <p style="text-decoration: line-through; letter-spacing: 50px;">&nbsp;&nbsp;</p>
         <p style="font-family: 'Cormorant Garamond'; font-size: 24px;">Huge welcomes Fura Johannesdottir as Chief Design<br>Officer.</p>
     </div>
 </div>
@@ -71,10 +79,12 @@
 
 <!--6페이지 열기-->
 <div style="background-image: url(img/hugeinc1.jpg); background-size: cover; background-position: center;  width: 100vw; height: 100vh;">
-    <div style="margin-left: 208px; padding-top: 30px;">
+    <div style="margin-left: 217px; padding-top: 30px;">
         <img src="img/검정H.jpg" style="margin-left: 700px;">
+        <p style="margin-left: -150px; margin-bottom: -73px;">05.&nbsp;&nbsp;&nbsp;<span style="text-decoration: line-through; letter-spacing: 50px;">&nbsp;&nbsp;</span></p>
         <p style="font-size: 25px; padding-top: 20px;">Culture.</p>
-        <p style="font-size: 90px; padding-top: 50px; line-height: 90px;">Black History<br>Month.</p>
+        <p style="font-size: 90px; padding-top: 50px; line-height: 90px; margin-bottom: 30px;">Black History<br>Month.</p>
+        <p style="text-decoration: line-through; letter-spacing: 50px;">&nbsp;&nbsp;</p>
         <p style="font-family: 'Cormorant Garamond'; font-size: 24px;">This is not a moment, issa movement. H by Jacqueline<br>DeBerry</p>
     </div>
 </div>
@@ -82,10 +92,12 @@
 
 <!--7페이지 열기-->
 <div style="background-image: url(img/hugeinc9png.png); background-size: cover; background-position: center;  width: 100vw; height: 100vh;">
-    <div style="margin-left: 208px; padding-top: 30px; color: #ec008c;">
+    <div style="margin-left: 217px; padding-top: 30px; color: #ec008c;">
         <img src="img/검정H.jpg" style="margin-left: 700px;">
+        <p style="margin-left: -150px; margin-bottom: -73px; color: #ex008c;">05.&nbsp;&nbsp;&nbsp;<span style="text-decoration: line-through; letter-spacing: 50px;">&nbsp;&nbsp;</span></p>
         <p style="font-size: 25px; padding-top: 20px;">Events.</p>
-        <p style="font-size: 90px; padding-top: 50px;">Let's talk.</p>
+        <p style="font-size: 90px; padding-top: 50px; margin-bottom: 30px;">Let's talk.</p>
+        <p style="text-decoration: line-through; letter-spacing: 50px; color: #ec008c;">&nbsp;&nbsp;</p>
         <p style="font-family: 'Cormorant Garamond'; font-size: 24px;">Join us of Magenta Loves an open-thought leadership<br>event series.</p>
     </div>
 </div>
