--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <link href="https://fonts.googleapis.com/css?family=Anton|Cormorant+Garamond:300&display=swap" rel="stylesheet">
 <style>
     p { font-family:'Anton'; }
-    html {margin: 0; border: 0; padding: 0;}
+    body {margin: 0; border: 0; padding: 0;}
 </style>
 
 <body>
 <!--1페이지 열기-->
-<div style="text-align: center; margin: 0; border: 0; padding: 0;">
-    <p style="font-size: 30px; color: #ea178c; margin-top: -1px; margin-bottom: -170px;">H</p>
-    <p style="font-size: 300px;">Hello.</p>
-    <p style="font-family: 'Cormorant Garamond'; font-weight: 500;  font-size: 20px; margin-top: -85px; font-weight: 800;">Today at Huge.</p>
+<div style="text-align: center; margin: 0; border: 0; padding: 0; width: 100vw; height: 100vh;">
+    <p style="font-size: 30px; color: #ea178c;">H</p>
+    <p style="font-size: 300px; margin-top: 7%; margin-bottom: 13%;">Hello.</p>
+    <p style="font-family: 'Cormorant Garamond'; font-weight: 500;  font-size: 20px; font-weight: 800;">Today at Huge.</p>
     <p>|</p>
 </div>
 <!--1페이지 닫기-->
