--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <head>
 <title>Hugenic practice</title>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css?family=Anton|Cormorant+Garamond:300&display=swap" rel="stylesheet">
+<link rel="icon" href="favicon.ico">
+<link rel="icon" href="img/favicon.ico">
+
 <style>
     p { font-family:'Anton'; }
-    body {margin: 0; border: 0; padding: 0;}
+    body {margin: 0; border: 0; padding: 0; width: 100vw; height: 100vh;}
 </style>
 
 <body>
