--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 <!--1페이지 열기-->
 <div style="text-align: center; margin: 0; border: 0; padding: 0; width: 100vw; height: 100vh;">
     <p style="font-size: 30px; color: #ea178c;">H</p>
-    <p style="font-size: 300px; margin-top: 7%; margin-bottom: 13%;">Hello.</p>
-    <p style="font-family: 'Cormorant Garamond'; font-weight: 500;  font-size: 20px; font-weight: 800;">Today at Huge.</p>
-    <p>|</p>
+    <p style="font-size: 300px; margin-top: 180px; margin-bottom: 180px;">Hello.</p>
+    <p style="font-family: 'Cormorant Garamond'; font-weight: 800;  font-size: 20px;">Today at Huge.<br>|</p>
 </div>
 <!--1페이지 닫기-->
 
